fixes center alignment

--- a/src/css/MobileTracks.module.css
+++ b/src/css/MobileTracks.module.css
@@ -1,10 +1,11 @@
 .container {
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
 .headingContainer {
-  text-align: center;
+  text-align: left;
 }
 
 .heading {
